2001-10-16  Arturo Espinosa Aldama  <arturo@ximian.com>

	* report.pl.in (xst_report): removed platform_list report.
	Changed platform_success format.

	* platform.pl.in (xst_platform_ensure_supported): no need
	to list the supported platforms using reports. platform_success
	report now requires the platform description too.
	(xst_platform_set): same regarding report.

2001-10-15  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in: Typo in PLATFORM_INFO and the codename
	for mdk-8.0.

	* general.pl.in (xst_merge_std_directives): Added the
	"platforms" directive.

	* platform.pl.in (xst_platform_print_list): Print an XML of
	the supported platforms.
	(xst_platform_list): Directive handler.

	* xml.pl.in (xst_xml_print_begin): Removed cosmetic comments.
	(xst_xml_print_end): same.

2001-10-06  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_interfaces_get_info): It's better
	to say an interface is up if it has an IP address.

2001-10-05  Arturo Espinosa Aldama  <arturo@ximian.com>

	* xml.pl.in (xst_xml_print_request_end): don't use print_comment:
	this breaks the protocol. Not even using xst_xml_print_string, to
	avoid the terminator getting into the debugs or the archiver.

2001-10-05  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_version): Fixed hacky way to find X binary, save it
	in main hash to cache it.
	(x_get_active_screen): Much more robust, should work now in any
	case (X4, X3 with or without ServerLayout).
	(x_probe): Oops, forgot to uncomment this!

2001-10-03  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (logindefs_add_defaults): Return the hash we fill :)
	(read_logindefs): assign the return value to something, don't just
	pretend you're interested in it! :)

	* x.pl.in (x_parse_unique_int): Added check for uniqueness.
	(x_parse_unique_string): Ditto.

	* users-conf.in: Override new values found from logindefs
	and not in profiles. Removed xst_progress remains.